# vrc-group-manage-toolbot

./: .gitignore
.github/workflows/: test.yml
.kilo/: pr_body.md
vrc-group-manage-toolbot/: .env  .env.example  .env.prod  .env.test  .gitignore  CHANGELOG.md  CONFIG_GUIDE.md  INTEGRATION_REPORT.md  README.md  TESTING.md  bot.py  pyproject.toml  run.py  run_tests.py  test_config.py  verify_tests.py
vrc-group-manage-toolbot/assets/css/: card.css.j2  markdown.css  markdown.css.j2  text.css.j2
vrc-group-manage-toolbot/assets/templates/: card.html.j2  text.html.j2
vrc-group-manage-toolbot/config/pic/: card.theme.json  markdown.theme.json  text.theme.json
vrc-group-manage-toolbot/docs/: HTML_RENDER.md  HTML_RENDER_EXAMPLES.md  HTML_RENDER_GUIDE.md  README.md  SCHEDULER_USAGE.md
vrc-group-manage-toolbot/plugins/: config_manager.py  group_admin.py  group_bind.py  group_manager.py  html_render_demo.py  scheduler_demo.py  user_bind.py
vrc-group-manage-toolbot/services/: __init__.py  api_guard.py  group_config.py  html_render.py  message_utils.py  permission.py  scheduler_service.py  user_binding.py
vrc-group-manage-toolbot/tests/: README.md  __init__.py  conftest.py  test_models.py  test_permission_runtime.py  test_plugins_smoke.py  test_services.py  test_vrc_client.py
vrc-group-manage-toolbot/tests/plugins/: __init__.py  test_config_manager.py  test_group_admin.py  test_group_bind.py  test_group_manager.py  test_user_bind.py  test_user_bind_deep.py
vrc-group-manage-toolbot/tests/services/: __init__.py  test_api_guard_real.py  test_edge_cases.py  test_group_config_real.py  test_message_utils_real.py  test_permission_real.py  test_user_binding_real.py
vrc-group-manage-toolbot/tests/utils/: __init__.py  test_message_utils.py  test_vrc_real.py
vrc-group-manage-toolbot/utils/: __init__.py  vrc_client.py  vrc_models.py
vrc-group-manage-toolbot/utils/VRC/: README.md  __init__.py  vrc_client.py  vrc_config.py  vrc_models.py
