[project]
name = "vrc-group-manage-toolbot"
version = "0.1.0"
description = "vrc-group-manage-toolbot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[aiohttp,fastapi,httpx,websockets]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-status>=0.9.0",
    "nonebot-plugin-docs>=2.5.0",
    "nonebot-plugin-sentry>=2.0.0",
    "nonebot-plugin-localstore>=0.7.4",
]

[tool.nonebot]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo", "single_session"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot-plugin-docs = ["nonebot_plugin_docs"]
nonebot-plugin-sentry = ["nonebot_plugin_sentry"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
