[project]
name = "vrc-group-manage-toolbot"
version = "0.2.0"
description = "vrc-group-manage-toolbot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[aiohttp,fastapi,httpx,websockets]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-htmlkit",
]

[tool.nonebot]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo", "single_session"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-htmlkit = ["nonebot_plugin_htmlkit"]
