[project]
name = "vrc-group-manage-toolbot"
version = "0.2.0"
description = "vrc-group-manage-toolbot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[aiohttp,fastapi,httpx,websockets]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebug>=0.4.0",
]

[project.optional-dependencies]
test = [
    "nonebug>=0.4.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
]

[tool.nonebot]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo", "single_session"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "__init__.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
[tool.setuptools.packages.find]
include = ["plugins*", "services*", "utils*", "data*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

